Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,6 @@ stages:
     - task: AzureStaticWebApp@0
       inputs:
           app_location: "/" 
-          output_location: "dist"
+          output_location: "dist/madder-libs"
       env:
           azure_static_web_apps_api_token: $(deployment_token)
