--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,14 +18,14 @@ stages:
     steps:
     - task: NodeTool@0
       inputs:
-        versionSpec: '16.x'
+        versionSpec: '18.x'
       displayName: 'Install Node.js'
 
     - script: |
         npm install -g @angular/cli
         npm install
         ng build
-      displayName: 'npm install, build and test'
+      displayName: 'npm install and build'
     - task: AzureStaticWebApp@0
       inputs:
           app_location: "/" 
