--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -1,34 +1,19 @@
-# Node.js Express Web App to Linux on Azure
-# Build a Node.js Express app and deploy it to Azure as a Linux web app.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
+# Starter pipeline
+# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
 
 trigger:
 - master
 
-stages:
-- stage: Build
-  displayName: Build stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
+pool:
+  vmImage: ubuntu-latest
 
-    steps:
-    - task: NodeTool@0
-      inputs:
-        versionSpec: '18.x'
-      displayName: 'Install Node.js'
+steps:
+- script: echo Hello, world!
+  displayName: 'Run a one-line script'
 
-    - script: |
-        npm install -g @angular/cli
-        npm install
-        ng build
-      displayName: 'npm install and build'
-    - task: AzureStaticWebApp@0
-      inputs:
-          app_location: "/" 
-          output_location: "dist/madder-libs"
-      env:
-          azure_static_web_apps_api_token: $(deployment_token)
+- script: |
+    echo Add other tasks to build, test, and deploy your project.
+    echo See https://aka.ms/yaml
+  displayName: 'Run a multi-line script'
