Update azure-pipelines.yml for Azure Pipelines

--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -67,7 +67,7 @@ stages:
               appName: $(webAppName)
               runtimeStack: 'NODE|18.0'
               package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
-              startUpCommand: 'npm run start'
+              startUpCommand: 'nohup node backend/server.js & ng serve'
 
 
 - stage: DeployPRD
